<resources>
    <string name="app_name">GUI_components</string>
    <string-array name="spinner_values">
        <item>light</item>
        <item>amber</item>
        <item>brown</item>
        <item>dark</item>
    </string-array>
    <string name="starbuzz_logo">starbuzz_logo</string>
    <string name="click_me">click me </string>
    <string name="how_do_you">How do you like your tea served?</string>
    <string name="hot">Hot</string>
    <string name="cold">Cold</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="lemon">Lemon</string>
    <string name="to_label">To:</string>
    <string name="email_hint">Enter email address</string>
    <string name="subject_hint">Subject</string>
    <string name="send_button">Send</string>
    <string name="message_hint">Message</string>
</resources>
